Use http when linking to superior-coin.com
This should be temporary; we plan to get https working on the server soon.

--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: superior
 version: 0.10.2-1
-summary: "SuperiorCoin: the secure, private, untraceable cryptocurrency https://superior-coin.com"
+summary: "SuperiorCoin: the secure, private, untraceable cryptocurrency http://superior-coin.com"
 description: |
     Superior is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
