--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: superior
-version: 0.10.2-1
-summary: "SuperiorCoin: the secure, private, untraceable cryptocurrency http://superior-coin.com"
+version: 0.12.0.0
+summary: "Superior: the secure, private, untraceable cryptocurrency https://superior-coin.com"
 description: |
     Superior is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
@@ -46,11 +46,15 @@ parts:
             - libunbound-dev
             - libevent-dev
             - libboost-all-dev
+            - libzmqpp-dev
+            - libzmq3-dev
+            - libsodium-dev
             - libdb-dev
             - libunwind-dev
             - libminiupnpc-dev
             - libldns-dev
             - libexpat1-dev
+            - libreadline6-dev
             - bison
             - doxygen
             - graphviz
