--- a/external/easylogging++/CMakeLists.txt
+++ b/external/easylogging++/CMakeLists.txt
@@ -1,5 +1,6 @@
-# Copyright (c) 2014-2017, The Monero Project
-# 
+# Copyright (c) 2014-2018, TheSuperiorCoin Project
+# Parts of this code may contain Copyright (c) 2014-2017, The Monero Project
+#
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without modification, are
@@ -51,6 +52,8 @@ if (BUILD_GUI_DEPS)
         set(lib_folder lib)
     endif()
     install(TARGETS easylogging
-        ARCHIVE DESTINATION ${lib_folder})
+        ARCHIVE DESTINATION ${lib_folder}
+        LIBRARY DESTINATION ${lib_folder})
 endif()
+set_property(TARGET easylogging APPEND PROPERTY COMPILE_FLAGS "-fPIC")
 
