--- a/src/blockchain_utilities/CMakeLists.txt
+++ b/src/blockchain_utilities/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2017-2020, The Superior Project
+# Copyright (c) 2014-2018, The X Project
 #
 # All rights reserved.
 #
@@ -29,13 +29,13 @@
 set(blocksdat "")
 if(PER_BLOCK_CHECKPOINT)
   if(APPLE)
-    add_custom_command(OUTPUT blocksdat.o MAIN_DEPENDENCY ../blocks/checkpoints.dat COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && touch stub.c && ${CMAKE_C_COMPILER} -o stub.o -c stub.c COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && ${CMAKE_LINKER} -r -sectcreate __DATA __blocks_dat ../blocks/checkpoints.dat -o ${CMAKE_CURRENT_BINARY_DIR}/blocksdat.o stub.o && rm -f stub.*)
+    add_custom_command(OUTPUT blocksdat.o MAIN_DEPENDENCY ../blocks/checkpoints.dat COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && touch stub.c && ${CMAKE_C_COMPILER} -o stub.o -c stub.c COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && ${CMAKE_LINKER} ${LD_RAW_FLAGS} -r -sectcreate __DATA __blocks_dat ../blocks/checkpoints.dat -o ${CMAKE_CURRENT_BINARY_DIR}/blocksdat.o stub.o && rm -f stub.*)
   else()
-    add_custom_command(OUTPUT blocksdat.o MAIN_DEPENDENCY ../blocks/checkpoints.dat COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && cp ../blocks/checkpoints.dat blocks.dat && ${CMAKE_LINKER} -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/blocksdat.o blocks.dat && rm -f blocks.dat)
+    add_custom_command(OUTPUT blocksdat.o MAIN_DEPENDENCY ../blocks/checkpoints.dat COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && cp ../blocks/checkpoints.dat blocks.dat && ${CMAKE_LINKER} ${LD_RAW_FLAGS} -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/blocksdat.o blocks.dat && rm -f blocks.dat)
   endif()
   set(blocksdat "blocksdat.o")
 endif()
-# Parts of this file are originally copyright (c) 2014-2017 The Monero Project
+
 set(blockchain_import_sources
   blockchain_import.cpp
   bootstrap_file.cpp
@@ -67,6 +67,30 @@ superior_private_headers(blockchain_export
 	  ${blockchain_export_private_headers})
 
 
+set(blockchain_blackball_sources
+  blockchain_blackball.cpp
+  )
+
+set(blockchain_blackball_private_headers
+  bootstrap_file.h
+  blocksdat_file.h
+  bootstrap_serialization.h
+  )
+
+superior_private_headers(blockchain_blackball
+	  ${blockchain_blackball_private_headers})
+
+set(blockchain_usage_sources
+  blockchain_usage.cpp
+  )
+
+set(blockchain_usage_private_headers)
+
+superior_private_headers(blockchain_usage
+	  ${blockchain_usage_private_headers})
+
+
+
 superior_add_executable(blockchain_import
   ${blockchain_import_sources}
   ${blockchain_import_private_headers}
@@ -77,6 +101,7 @@ target_link_libraries(blockchain_import
     cryptonote_core
     blockchain_db
     p2p
+    version
     epee
     ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
@@ -89,11 +114,10 @@ if(ARCH_WIDTH)
     PUBLIC -DARCH_WIDTH=${ARCH_WIDTH})
 endif()
 
-add_dependencies(blockchain_import
-	version)
 set_property(TARGET blockchain_import
 	PROPERTY
 	OUTPUT_NAME "superior-blockchain-import")
+install(TARGETS blockchain_import DESTINATION bin)
 
 superior_add_executable(blockchain_export
   ${blockchain_export_sources}
@@ -104,6 +128,7 @@ target_link_libraries(blockchain_export
     cryptonote_core
     blockchain_db
     p2p
+    version
     epee
     ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
@@ -111,9 +136,54 @@ target_link_libraries(blockchain_export
     ${CMAKE_THREAD_LIBS_INIT}
     ${EXTRA_LIBRARIES})
 
-add_dependencies(blockchain_export
-	version)
 set_property(TARGET blockchain_export
 	PROPERTY
 	OUTPUT_NAME "superior-blockchain-export")
+install(TARGETS blockchain_export DESTINATION bin)
+
+superior_add_executable(blockchain_blackball
+  ${blockchain_blackball_sources}
+  ${blockchain_blackball_private_headers})
+
+target_link_libraries(blockchain_blackball
+  PRIVATE
+    wallet
+    cryptonote_core
+    blockchain_db
+    p2p
+    version
+    epee
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+    ${Boost_THREAD_LIBRARY}
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${EXTRA_LIBRARIES})
+
+set_property(TARGET blockchain_blackball
+	PROPERTY
+	OUTPUT_NAME "superior-blockchain-blackball")
+install(TARGETS blockchain_blackball DESTINATION bin)
+
+
+superior_add_executable(blockchain_usage
+  ${blockchain_usage_sources}
+  ${blockchain_usage_private_headers})
+
+target_link_libraries(blockchain_usage
+  PRIVATE
+    cryptonote_core
+    blockchain_db
+    p2p
+    version
+    epee
+    ${Boost_FILESYSTEM_LIBRARY}
+    ${Boost_SYSTEM_LIBRARY}
+    ${Boost_THREAD_LIBRARY}
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${EXTRA_LIBRARIES})
+
+set_property(TARGET blockchain_usage
+	PROPERTY
+	OUTPUT_NAME "superior-blockchain-usage")
+install(TARGETS blockchain_usage DESTINATION bin)
 
