--- a/src/blockchain_utilities/CMakeLists.txt
+++ b/src/blockchain_utilities/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Copyright (c) 2014-2018, The X Project
+# Copyright (c) 2017-2020, TheSuperiorCoin Project
+# Copyright (c) 2014-2018, The Moner Project
 #
 # All rights reserved.
 #
