V7 Variant added for POW

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Copyright (c) 2014-2017, The Superior Project
+# Copyright (c) 2014-2018, TheSuperiorCoin Project
+# Copyright (c) 2017-2017, The Monero Project
 #
 # All rights reserved.
 #
@@ -29,7 +30,7 @@
 set(crypto_sources
   aesb.c
   blake256.c
-  chacha8.c
+  chacha.c
   crypto-ops-data.c
   crypto-ops.c
   crypto.cpp
@@ -51,7 +52,7 @@ set(crypto_headers)
 
 set(crypto_private_headers
   blake256.h
-  chacha8.h
+  chacha.h
   crypto-ops.h
   crypto.h
   generic-ops.h
@@ -76,6 +77,7 @@ superior_add_library(cncrypto
   ${crypto_private_headers})
 target_link_libraries(cncrypto
   PUBLIC
+    epee
     ${Boost_SYSTEM_LIBRARY}
   PRIVATE
     ${EXTRA_LIBRARIES})
