V7 BlockReward change Daemon

--- a/src/debug_utilities/CMakeLists.txt
+++ b/src/debug_utilities/CMakeLists.txt
@@ -30,21 +30,20 @@ set(cn_deserialize_sources
   cn_deserialize.cpp
   )
 
-monero_add_executable(cn_deserialize
+superior_add_executable(cn_deserialize
   ${cn_deserialize_sources}
   ${cn_deserialize_private_headers})
 
 target_link_libraries(cn_deserialize
   LINK_PRIVATE
     cryptonote_core
-    common
     blockchain_db
+    device
+    ringct
     p2p
     epee
     ${CMAKE_THREAD_LIBS_INIT})
 
-add_dependencies(cn_deserialize
-	version)
 set_property(TARGET cn_deserialize
 	PROPERTY
 	OUTPUT_NAME "superior-utils-deserialize")
@@ -54,7 +53,7 @@ set(object_sizes_sources
   object_sizes.cpp
   )
 
-monero_add_executable(object_sizes
+superior_add_executable(object_sizes
   ${object_sizes_sources}
   ${object_sizes_private_headers})
 
@@ -66,8 +65,6 @@ target_link_libraries(object_sizes
     epee
     ${CMAKE_THREAD_LIBS_INIT})
 
-add_dependencies(object_sizes
-	version)
 set_property(TARGET object_sizes
 	PROPERTY
 	OUTPUT_NAME "superior-utils-object-sizes")
