--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -30,14 +30,16 @@
 # Parts of this file are originally copyright (c) 2012-2013 The Cryptonote developersParts of this file are originally copyright (c) 2012-2013 The Cryptonote developers
 
 set(unit_tests_sources
+  apply_permutation.cpp
   address_from_url.cpp
   ban.cpp
   base58.cpp
   blockchain_db.cpp
   block_queue.cpp
   block_reward.cpp
+  bulletproofs.cpp
   canonical_amounts.cpp
-  chacha8.cpp
+  chacha.cpp
   checkpoints.cpp
   command_line.cpp
   crypto.cpp
@@ -48,17 +50,21 @@ set(unit_tests_sources
   epee_utils.cpp
   fee.cpp
   get_xtype_from_string.cpp
+  hashchain.cpp
   http.cpp
   main.cpp
+  memwipe.cpp
   mnemonics.cpp
   mul_div.cpp
+  multisig.cpp
   parse_amount.cpp
   serialization.cpp
+  sha256.cpp
   slow_memmem.cpp
+  subaddress.cpp
   test_tx_utils.cpp
   test_peerlist.cpp
   test_protocol_pack.cpp
-  thread_group.cpp
   hardfork.cpp
   unbound.cpp
   uri.cpp
@@ -82,6 +88,7 @@ target_link_libraries(unit_tests
     rpc
     wallet
     p2p
+    version
     epee
     ${Boost_CHRONO_LIBRARY}
     ${Boost_THREAD_LIBRARY}
@@ -99,6 +106,8 @@ if (NOT MSVC)
       COMPILE_FLAGS " -Wno-undef -Wno-sign-compare")
 endif ()
 
+SET_PROPERTY(SOURCE memwipe.cpp PROPERTY COMPILE_FLAGS -Ofast)
+
 add_test(
   NAME    unit_tests
-  COMMAND unit_tests)
+  COMMAND unit_tests --data-dir "${TEST_DATA_DIR}")
