--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -27,6 +27,9 @@
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 # Parts of this file are originally copyright (c) 2012-2013 The Cryptonote developersParts of this file are originally copyright (c) 2012-2013 The Cryptonote developers
+#
+# This may contain code Copyright (c) 2014-2017, The Monero Project
+#
 
 
 # warnings are cleared only for GCC on Linux
@@ -36,6 +39,6 @@ endif()
 
 add_subdirectory(epee)
 
-##
+#
 # This may contain code Copyright (c) 2014-2017, The Monero Project
-##
+#
