--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "external/unbound"]
 	path = external/unbound
 	url = https://github.com/monero-project/unbound
-	branch = superior
+	branch = monero
 [submodule "external/miniupnp"]
 	path = external/miniupnp
-	url = https://github.com/momero-project/miniupnp
-	branch = superior
+	url = https://github.com/monero-project/miniupnp
+	branch = monero
 [submodule "external/rapidjson"]
 	path = external/rapidjson
 	url = https://github.com/Tencent/rapidjson
