July 10th Updates
(cherry picked from commit 172b9a0aef91767e0904632967df9fdce75642ef)

# Conflicts:
#	CMakeLists.txt

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -59,7 +59,7 @@ else()
     message(STATUS "Using miniupnpc from local source tree (/external/miniupnpc)")
   endif()
 
-  add_subdirectory(miniupnpc)
+  add_subdirectory(miniupnp/miniupnpc)
 
   set_property(TARGET libminiupnpc-static PROPERTY FOLDER "external")
   if(MSVC)
